--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,3 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Contact Me</title><link href="base.css" rel="stylesheet" type="text/css" /><link href="fullscreen.css" rel="stylesheet" type="text/css" /></head><body><div class="Main"><div class="Box"><p><p style="text-align:center;">Contact Me</p>
-    <p style="text-align: center;">📧 hi.tarek.chen@gmail.com</p>
+    <p style="text-align: center;">📧 hi.qifu.chen@gmail.com</p>
     </p></div></div></body></html>
